# net-reaper

./: .gitignore  README.md  build-msix.bat  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md
browser-extension/: background.js  manifest.json  package.bat  popup.html  popup.js
browser-extension/host/: com.eerie.net_reaper.json  install.bat  net_reaper_host.bat  net_reaper_host.js
msix/: AppxManifest.xml
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  download.rs  lib.rs  main.rs  native_host.rs  native_host_register.rs  pipe.rs
