[package]
name = "net-reaper"
version = "0.1.0"
description = "A high-performance internet download manager"
authors = ["EERIE"]
edition = "2021"
default-run = "net-reaper"

[lib]
name = "net_reaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "net-reaper"
path = "src/main.rs"

[[bin]]
name = "net-reaper-host"
path = "src/native_host.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
urlencoding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
